@@ -1,5 +1,9 @@
 # $Id$
 
+2006-11-28
+	* Rearrange retry attempts in pop3 and imap code, removing sleep() 
+	calls which cause the whole process to sleep, not just the thread.
+
 2006-11-22
 	* Added max_specials config item with default 512.  This should
 	close bug #1574523 for real this time.  Thanks to John Harrigan
